[AIX-208] added retention page
